Fixed file URL bug in extensions loader.